--- a/css/main.css
+++ b/css/main.css
@@ -1640,6 +1640,7 @@ footer .footer-nav li a:hover {
 
 .footer-bottom {
     padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .footer-bottom .footer-text a:hover {
