--- a/css/main.css
+++ b/css/main.css
@@ -1683,6 +1683,7 @@ footer .footer-nav li a:hover {
     text-align: justify;
     line-height: 30px;
 }
+
 .content-theme-2 {
     font-size: 16px;
     text-indent: 50px;
@@ -1692,4 +1693,19 @@ footer .footer-nav li a:hover {
 
 .partial-p {
     padding-top: 100px;
+}
+
+/* Map */
+
+.mapouter {
+    text-align: right;
+    height: 500px;
+    width: 600px;
+}
+
+.gmap_canvas {
+    overflow: hidden;
+    background: none !important;
+    height: 500px;
+    width: 600px;
 }
