--- a/css/main.css
+++ b/css/main.css
@@ -1709,3 +1709,19 @@ footer .footer-nav li a:hover {
     height: 500px;
     width: 600px;
 }
+
+/* Particle JS */
+
+#particles-js canvas {
+    background: -moz-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
+    background: -webkit-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
+    background: linear-gradient(to right, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.text-black {
+    color: #000000 !important;
+}
